tests/base/invalid/Return_CompileFail_5.whiley
import whiley.lang.*:*

int f(bool y):
    return !y
